icarufb-dut-code/stcompiler/iec.output
Terminais não utilizados na gramática

   T_HASH
   T_XOR
   T_AT
   T_TASK
   T_ON
   T_WITH
   T_BI_ADD
   T_BI_MUL
   T_BI_SUB
   T_BI_DIV
   T_BI_MOD
   T_BI_GT
   T_BI_GE
   T_BI_EQ
   T_BI_LT
   T_BI_LE
   T_BI_NE


Gramática

    0 $accept: StFile $end

    1 StFile: Blocks System
    2       | Blocks
    3       | System

    4 Blocks: Blocks FunctionBlock
    5       | FunctionBlock
    6       | CustomFunctionBlock

    7 $@1: %empty

    8 $@2: %empty

    9 $@3: %empty

   10 $@4: %empty

   11 $@5: %empty

   12 $@6: %empty

   13 CustomFunctionBlock: T_CUSTOM T_FUNCTION_BLOCK T_ID $@1 EventInputListContainer EventOutputListContainer VarInputListContainer VarOutputListContainer VarListContainer $@2 T_ALGORITHM T_ID T_TWO_POINTS $@3 StatementList T_END_ALGORITHM $@4 T_ALGORITHM T_ID T_TWO_POINTS $@5 StatementList T_END_ALGORITHM $@6 T_END_FUNCTION_BLOCK

   14 $@7: %empty

   15 $@8: %empty

   16 FunctionBlock: T_FUNCTION_BLOCK T_ID $@7 EventInputListContainer EventOutputListContainer EcStatesListContainer EcTransListContainer VarInputListContainer VarOutputListContainer VarListContainer $@8 FbContinue T_END_FUNCTION_BLOCK

   17 FbContinue: AlgorithmList
   18           | FbsListContainer EventConnListContainer DataConnListContainer

   19 EventInputListContainer: %empty
   20                        | T_EVENT_INPUT EventList T_END_EVENT

   21 EventOutputListContainer: %empty
   22                         | T_EVENT_OUTPUT EventList T_END_EVENT

   23 EventList: %empty
   24          | EventList Event T_SEMICOLON

   25 Event: T_ID

   26 EcStatesListContainer: T_EC_STATES EcStatesList T_END_STATES

   27 EcStatesList: EcStatesList EcStates
   28             | EcStates

   29 $@9: %empty

   30 EcStates: T_ID $@9 EcActionsList T_SEMICOLON

   31 EcActionsList: %empty
   32              | T_TWO_POINTS EcActionsListComa

   33 EcActionsListComa: EcActionsListComa T_COMA EcAction
   34                  | EcAction
   35                  | %empty

   36 EcAction: T_ID T_ARROW T_ID
   37         | T_ARROW T_ID
   38         | T_ID T_ARROW

   39 $@10: %empty

   40 $@11: %empty

   41 EcTransListContainer: T_EC_TRANSITIONS $@10 EcTransList $@11 T_END_TRANSITIONS

   42 EcTransList: %empty
   43            | EcTransList EcTrans

   44 $@12: %empty

   45 EcTrans: T_ID T_TO T_ID T_ASSIGNMENT Expr $@12 T_SEMICOLON

   46 VarInputListContainer: %empty
   47                      | T_VAR_INPUT VarList T_END_VAR

   48 VarOutputListContainer: %empty
   49                       | T_VAR_OUTPUT VarList T_END_VAR

   50 VarListContainer: %empty
   51                 | T_VAR VarList T_END_VAR

   52 VarList: %empty
   53        | VarList VarDecl

   54 VarDecl: T_ID T_TWO_POINTS T_ID VarDeclAssig T_SEMICOLON

   55 VarDeclAssig: %empty
   56             | T_ASSIGNMENT T_NUMBER

   57 System: T_SYSTEM T_ID DeviceList T_END_SYSTEM

   58 DeviceList: Device DeviceList
   59           | Device

   60 $@13: %empty

   61 Device: T_DEVICE T_ID T_TWO_POINTS T_ID $@13 ResourceList T_END_DEVICE

   62 $@14: %empty

   63 Device: T_DEVICE T_ID T_TWO_POINTS T_ID T_OP T_CP $@14 ResourceList T_END_DEVICE

   64 ResourceList: ResourceList Resource
   65             | Resource

   66 $@15: %empty

   67 Resource: T_RESOURCE T_ID T_TWO_POINTS T_ID T_OP T_CP $@15 FbsListContainer EventConnListContainer DataConnListContainer T_END_RESOURCE

   68 FbsListContainer: T_FBS FbsList T_END_FBS

   69 FbsList: FbsList FbsDeclaration
   70        | FbsDeclaration

   71 FbsDeclaration: T_ID T_TWO_POINTS T_ID T_SEMICOLON

   72 $@16: %empty

   73 FbsDeclaration: T_ID T_TWO_POINTS T_ID T_OP $@16 ConstAssigList T_CP T_SEMICOLON

   74 ConstAssigList: ConstAssigList ConstAssig
   75               | ConstAssig

   76 ConstAssig: T_ID T_ASSIGNMENT T_NUMBER T_SEMICOLON

   77 $@17: %empty

   78 EventConnListContainer: T_EVENT_CONNECTIONS $@17 ConnectionList T_END_CONNECTIONS

   79 $@18: %empty

   80 DataConnListContainer: T_DATA_CONNECTIONS $@18 ConnectionList T_END_CONNECTIONS

   81 ConnectionList: ConnectionList Connection
   82               | Connection

   83 Connection: T_ID T_POINT T_ID T_TO T_ID T_POINT T_ID T_SEMICOLON

   84 AlgorithmList: %empty
   85              | AlgorithmList Algorithm

   86 $@19: %empty

   87 Algorithm: T_ALGORITHM T_ID T_IN T_ID T_TWO_POINTS $@19 StatementList T_END_ALGORITHM

   88 StatementList: %empty
   89              | StatementList Assignment
   90              | StatementList If_stat
   91              | StatementList While_stat
   92              | StatementList Call_stat T_SEMICOLON
   93              | StatementList AsmBlock

   94 AsmBlock: T_ASM AsmCode T_END_ASM

   95 AsmCode: %empty
   96        | AsmCode Instruction

   97 Instruction: T_LOAD AsmIdNum
   98            | T_CONST T_NUMBER
   99            | T_STORE AsmIdNum
  100            | AsmIf T_GOTO AsmIdNumGoto
  101            | T_NISND
  102            | T_OR
  103            | T_NIRCV
  104            | T_GOTO AsmIdNumGoto
  105            | T_ID T_TWO_POINTS

  106 AsmIf: T_IF
  107      | T_IFEQ

  108 AsmIdNumGoto: T_ID
  109             | T_NUMBER
  110             | T_ADD T_NUMBER

  111 AsmIdNum: T_ID
  112         | T_NUMBER
  113         | T_ADD T_NUMBER

  114 Call_stat: T_BI_SET_REG T_OP Expr T_COMA Expr T_CP
  115          | T_BI_GET_REG T_OP Expr T_CP
  116          | T_BI_GET_REG_REAL T_OP Expr T_CP

  117 While_stat: T_WHILE Expr T_DO StatementList T_END_WHILE T_SEMICOLON

  118 $@20: %empty

  119 If_stat: T_IF Expr T_THEN $@20 StatementList IFContinue

  120 IFContinue: T_END_IF T_SEMICOLON

  121 $@21: %empty

  122 IFContinue: T_ELSE $@21 StatementList T_END_IF T_SEMICOLON

  123 $@22: %empty

  124 $@23: %empty

  125 IFContinue: T_ELSIF $@22 Expr T_THEN $@23 StatementList IFContinue

  126 Assignment: T_ID T_ASSIGNMENT Expr T_SEMICOLON

  127 M: %empty

  128 Expr: Logical_Expr

  129 Logical_Expr: Logical_Expr T_OR M Logical_Expr_p2
  130             | Logical_Expr_p2

  131 Logical_Expr_p2: Logical_Expr_p2 T_AND M Logical_Expr_p1
  132                | Logical_Expr_p1

  133 Logical_Expr_p1: %empty
  134                | Relational_Expr

  135 Relational_Expr: Relational_Expr Relational_Operator Arithmetic_Expr
  136                | Arithmetic_Expr

  137 Arithmetic_Expr: Arithmetic_Expr T_ADD Arithmetic_Expr_p1
  138                | Arithmetic_Expr T_SUB Arithmetic_Expr_p1
  139                | Arithmetic_Expr_p1

  140 Arithmetic_Expr_p1: Arithmetic_Expr_p1 T_MUL Factor
  141                   | Arithmetic_Expr_p1 T_DIV Factor
  142                   | Factor

  143 Factor: T_NUMBER
  144       | T_NUMBER_REAL
  145       | T_OP Expr T_CP
  146       | T_NOT Factor
  147       | T_ID
  148       | Call_stat

  149 Relational_Operator: T_GT
  150                    | T_GE
  151                    | T_LT
  152                    | T_LE
  153                    | T_EQ


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
T_FUNCTION_BLOCK (258) 13 16
T_END_FUNCTION_BLOCK (259) 13 16
T_SYSTEM (260) 57
T_END_SYSTEM (261) 57
T_DEVICE (262) 61 63
T_END_DEVICE (263) 61 63
T_CUSTOM (264) 13
T_ALGORITHM (265) 13 87
T_END_ALGORITHM (266) 13 87
T_IN (267) 87
T_END_FBS (268) 68
T_FBS (269) 68
T_EVENT_CONNECTIONS (270) 78
T_DATA_CONNECTIONS (271) 80
T_END_CONNECTIONS (272) 78 80
T_EVENT_INPUT (273) 20
T_EVENT_OUTPUT (274) 22
T_END_EVENT (275) 20 22
T_EC_STATES (276) 26
T_END_STATES (277) 26
T_EC_TRANSITIONS (278) 41
T_END_TRANSITIONS (279) 41
T_VAR (280) 51
T_VAR_INPUT (281) 47
T_VAR_OUTPUT (282) 49
T_END_VAR (283) 47 49 51
T_TWO_POINTS (284) 13 32 54 61 63 67 71 73 87 105
T_SEMICOLON (285) 24 30 45 54 71 73 76 83 92 117 120 122 126
T_ASSIGNMENT (286) 45 56 76 126
T_OP (287) 63 67 73 114 115 116 145
T_CP (288) 63 67 73 114 115 116 145
T_COMA (289) 33 114
T_POINT (290) 83
T_HASH (291)
T_ARROW (292) 36 37 38
T_OR (293) 102 129
T_AND (294) 131
T_NOT (295) 146
T_XOR (296)
T_GT (297) 149
T_LT (298) 151
T_EQ (299) 153
T_GE (300) 150
T_LE (301) 152
T_ADD (302) 110 113 137
T_SUB (303) 138
T_DIV (304) 141
T_MUL (305) 140
T_ID (306) 13 16 25 30 36 37 38 45 54 57 61 63 67 71 73 76 83 87 105
    108 111 126 147
T_NUMBER (307) 56 76 98 109 110 112 113 143
T_NUMBER_REAL (308) 144
T_AT (309)
T_TO (310) 45 83
T_RESOURCE (311) 67
T_END_RESOURCE (312) 67
T_TASK (313)
T_ON (314)
T_WITH (315)
T_IF (316) 106 119
T_THEN (317) 119 125
T_END_IF (318) 120 122
T_ELSE (319) 122
T_ELSIF (320) 125
T_WHILE (321) 117
T_DO (322) 117
T_END_WHILE (323) 117
T_BI_ADD (324)
T_BI_MUL (325)
T_BI_SUB (326)
T_BI_DIV (327)
T_BI_MOD (328)
T_BI_GT (329)
T_BI_GE (330)
T_BI_EQ (331)
T_BI_LT (332)
T_BI_LE (333)
T_BI_NE (334)
T_BI_SET_REG (335) 114
T_BI_GET_REG (336) 115
T_BI_GET_REG_REAL (337) 116
T_ASM (338) 94
T_END_ASM (339) 94
T_NISND (340) 101
T_NIRCV (341) 103
T_STORE (342) 99
T_LOAD (343) 97
T_GOTO (344) 100 104
T_CONST (345) 98
T_IFEQ (346) 107


Não-terminais com as regras onde eles aparecem

$accept (92)
    à esquerda: 0
StFile (93)
    à esquerda: 1 2 3, à direita: 0
Blocks (94)
    à esquerda: 4 5 6, à direita: 1 2 4
CustomFunctionBlock (95)
    à esquerda: 13, à direita: 6
$@1 (96)
    à esquerda: 7, à direita: 13
$@2 (97)
    à esquerda: 8, à direita: 13
$@3 (98)
    à esquerda: 9, à direita: 13
$@4 (99)
    à esquerda: 10, à direita: 13
$@5 (100)
    à esquerda: 11, à direita: 13
$@6 (101)
    à esquerda: 12, à direita: 13
FunctionBlock (102)
    à esquerda: 16, à direita: 4 5
$@7 (103)
    à esquerda: 14, à direita: 16
$@8 (104)
    à esquerda: 15, à direita: 16
FbContinue (105)
    à esquerda: 17 18, à direita: 16
EventInputListContainer (106)
    à esquerda: 19 20, à direita: 13 16
EventOutputListContainer (107)
    à esquerda: 21 22, à direita: 13 16
EventList (108)
    à esquerda: 23 24, à direita: 20 22 24
Event (109)
    à esquerda: 25, à direita: 24
EcStatesListContainer (110)
    à esquerda: 26, à direita: 16
EcStatesList (111)
    à esquerda: 27 28, à direita: 26 27
EcStates (112)
    à esquerda: 30, à direita: 27 28
$@9 (113)
    à esquerda: 29, à direita: 30
EcActionsList (114)
    à esquerda: 31 32, à direita: 30
EcActionsListComa (115)
    à esquerda: 33 34 35, à direita: 32 33
EcAction (116)
    à esquerda: 36 37 38, à direita: 33 34
EcTransListContainer (117)
    à esquerda: 41, à direita: 16
$@10 (118)
    à esquerda: 39, à direita: 41
$@11 (119)
    à esquerda: 40, à direita: 41
EcTransList (120)
    à esquerda: 42 43, à direita: 41 43
EcTrans (121)
    à esquerda: 45, à direita: 43
$@12 (122)
    à esquerda: 44, à direita: 45
VarInputListContainer (123)
    à esquerda: 46 47, à direita: 13 16
VarOutputListContainer (124)
    à esquerda: 48 49, à direita: 13 16
VarListContainer (125)
    à esquerda: 50 51, à direita: 13 16
VarList (126)
    à esquerda: 52 53, à direita: 47 49 51 53
VarDecl (127)
    à esquerda: 54, à direita: 53
VarDeclAssig (128)
    à esquerda: 55 56, à direita: 54
System (129)
    à esquerda: 57, à direita: 1 3
DeviceList (130)
    à esquerda: 58 59, à direita: 57 58
Device (131)
    à esquerda: 61 63, à direita: 58 59
$@13 (132)
    à esquerda: 60, à direita: 61
$@14 (133)
    à esquerda: 62, à direita: 63
ResourceList (134)
    à esquerda: 64 65, à direita: 61 63 64
Resource (135)
    à esquerda: 67, à direita: 64 65
$@15 (136)
    à esquerda: 66, à direita: 67
FbsListContainer (137)
    à esquerda: 68, à direita: 18 67
FbsList (138)
    à esquerda: 69 70, à direita: 68 69
FbsDeclaration (139)
    à esquerda: 71 73, à direita: 69 70
$@16 (140)
    à esquerda: 72, à direita: 73
ConstAssigList (141)
    à esquerda: 74 75, à direita: 73 74
ConstAssig (142)
    à esquerda: 76, à direita: 74 75
EventConnListContainer (143)
    à esquerda: 78, à direita: 18 67
$@17 (144)
    à esquerda: 77, à direita: 78
DataConnListContainer (145)
    à esquerda: 80, à direita: 18 67
$@18 (146)
    à esquerda: 79, à direita: 80
ConnectionList (147)
    à esquerda: 81 82, à direita: 78 80 81
Connection (148)
    à esquerda: 83, à direita: 81 82
AlgorithmList (149)
    à esquerda: 84 85, à direita: 17 85
Algorithm (150)
    à esquerda: 87, à direita: 85
$@19 (151)
    à esquerda: 86, à direita: 87
StatementList (152)
    à esquerda: 88 89 90 91 92 93, à direita: 13 87 89 90 91 92 93
    117 119 122 125
AsmBlock (153)
    à esquerda: 94, à direita: 93
AsmCode (154)
    à esquerda: 95 96, à direita: 94 96
Instruction (155)
    à esquerda: 97 98 99 100 101 102 103 104 105, à direita: 96
AsmIf (156)
    à esquerda: 106 107, à direita: 100
AsmIdNumGoto (157)
    à esquerda: 108 109 110, à direita: 100 104
AsmIdNum (158)
    à esquerda: 111 112 113, à direita: 97 99
Call_stat (159)
    à esquerda: 114 115 116, à direita: 92 148
While_stat (160)
    à esquerda: 117, à direita: 91
If_stat (161)
    à esquerda: 119, à direita: 90
$@20 (162)
    à esquerda: 118, à direita: 119
IFContinue (163)
    à esquerda: 120 122 125, à direita: 119 125
$@21 (164)
    à esquerda: 121, à direita: 122
$@22 (165)
    à esquerda: 123, à direita: 125
$@23 (166)
    à esquerda: 124, à direita: 125
Assignment (167)
    à esquerda: 126, à direita: 89
M (168)
    à esquerda: 127, à direita: 129 131
Expr (169)
    à esquerda: 128, à direita: 45 114 115 116 117 119 125 126 145
Logical_Expr (170)
    à esquerda: 129 130, à direita: 128 129
Logical_Expr_p2 (171)
    à esquerda: 131 132, à direita: 129 130 131
Logical_Expr_p1 (172)
    à esquerda: 133 134, à direita: 131 132
Relational_Expr (173)
    à esquerda: 135 136, à direita: 134 135
Arithmetic_Expr (174)
    à esquerda: 137 138 139, à direita: 135 136 137 138
Arithmetic_Expr_p1 (175)
    à esquerda: 140 141 142, à direita: 137 138 139 140 141
Factor (176)
    à esquerda: 143 144 145 146 147 148, à direita: 140 141 142 146
Relational_Operator (177)
    à esquerda: 149 150 151 152 153, à direita: 135


State 0

    0 $accept: . StFile $end

    T_FUNCTION_BLOCK  deslocar, e ir ao estado 1
    T_SYSTEM          deslocar, e ir ao estado 2
    T_CUSTOM          deslocar, e ir ao estado 3

    StFile               ir ao estado 4
    Blocks               ir ao estado 5
    CustomFunctionBlock  ir ao estado 6
    FunctionBlock        ir ao estado 7
    System               ir ao estado 8


State 1

   16 FunctionBlock: T_FUNCTION_BLOCK . T_ID $@7 EventInputListContainer EventOutputListContainer EcStatesListContainer EcTransListContainer VarInputListContainer VarOutputListContainer VarListContainer $@8 FbContinue T_END_FUNCTION_BLOCK

    T_ID  deslocar, e ir ao estado 9


State 2

   57 System: T_SYSTEM . T_ID DeviceList T_END_SYSTEM

    T_ID  deslocar, e ir ao estado 10


State 3

   13 CustomFunctionBlock: T_CUSTOM . T_FUNCTION_BLOCK T_ID $@1 EventInputListContainer EventOutputListContainer VarInputListContainer VarOutputListContainer VarListContainer $@2 T_ALGORITHM T_ID T_TWO_POINTS $@3 StatementList T_END_ALGORITHM $@4 T_ALGORITHM T_ID T_TWO_POINTS $@5 StatementList T_END_ALGORITHM $@6 T_END_FUNCTION_BLOCK

    T_FUNCTION_BLOCK  deslocar, e ir ao estado 11


State 4

    0 $accept: StFile . $end

    $end  deslocar, e ir ao estado 12


State 5

    1 StFile: Blocks . System
    2       | Blocks .
    4 Blocks: Blocks . FunctionBlock

    T_FUNCTION_BLOCK  deslocar, e ir ao estado 1
    T_SYSTEM          deslocar, e ir ao estado 2

    $padrão  reduzir usando a regra 2 (StFile)

    FunctionBlock  ir ao estado 13
    System         ir ao estado 14


State 6

    6 Blocks: CustomFunctionBlock .

    $padrão  reduzir usando a regra 6 (Blocks)


State 7

    5 Blocks: FunctionBlock .

    $padrão  reduzir usando a regra 5 (Blocks)


State 8

    3 StFile: System .

    $padrão  reduzir usando a regra 3 (StFile)


State 9

   16 FunctionBlock: T_FUNCTION_BLOCK T_ID . $@7 EventInputListContainer EventOutputListContainer EcStatesListContainer EcTransListContainer VarInputListContainer VarOutputListContainer VarListContainer $@8 FbContinue T_END_FUNCTION_BLOCK

    $padrão  reduzir usando a regra 14 ($@7)

    $@7  ir ao estado 15


State 10

   57 System: T_SYSTEM T_ID . DeviceList T_END_SYSTEM

    T_DEVICE  deslocar, e ir ao estado 16

    DeviceList  ir ao estado 17
    Device      ir ao estado 18


State 11

   13 CustomFunctionBlock: T_CUSTOM T_FUNCTION_BLOCK . T_ID $@1 EventInputListContainer EventOutputListContainer VarInputListContainer VarOutputListContainer VarListContainer $@2 T_ALGORITHM T_ID T_TWO_POINTS $@3 StatementList T_END_ALGORITHM $@4 T_ALGORITHM T_ID T_TWO_POINTS $@5 StatementList T_END_ALGORITHM $@6 T_END_FUNCTION_BLOCK

    T_ID  deslocar, e ir ao estado 19


State 12

    0 $accept: StFile $end .

    $padrão  aceitar


State 13

    4 Blocks: Blocks FunctionBlock .

    $padrão  reduzir usando a regra 4 (Blocks)


State 14

    1 StFile: Blocks System .

    $padrão  reduzir usando a regra 1 (StFile)


State 15

   16 FunctionBlock: T_FUNCTION_BLOCK T_ID $@7 . EventInputListContainer EventOutputListContainer EcStatesListContainer EcTransListContainer VarInputListContainer VarOutputListContainer VarListContainer $@8 FbContinue T_END_FUNCTION_BLOCK

    T_EVENT_INPUT  deslocar, e ir ao estado 20

    $padrão  reduzir usando a regra 19 (EventInputListContainer)

    EventInputListContainer  ir ao estado 21


State 16

   61 Device: T_DEVICE . T_ID T_TWO_POINTS T_ID $@13 ResourceList T_END_DEVICE
   63       | T_DEVICE . T_ID T_TWO_POINTS T_ID T_OP T_CP $@14 ResourceList T_END_DEVICE

    T_ID  deslocar, e ir ao estado 22


State 17

   57 System: T_SYSTEM T_ID DeviceList . T_END_SYSTEM

    T_END_SYSTEM  deslocar, e ir ao estado 23


State 18

   58 DeviceList: Device . DeviceList
   59           | Device .

    T_DEVICE  deslocar, e ir ao estado 16

    $padrão  reduzir usando a regra 59 (DeviceList)

    DeviceList  ir ao estado 24
    Device      ir ao estado 18


State 19

   13 CustomFunctionBlock: T_CUSTOM T_FUNCTION_BLOCK T_ID . $@1 EventInputListContainer EventOutputListContainer VarInputListContainer VarOutputListContainer VarListContainer $@2 T_ALGORITHM T_ID T_TWO_POINTS $@3 StatementList T_END_ALGORITHM $@4 T_ALGORITHM T_ID T_TWO_POINTS $@5 StatementList T_END_ALGORITHM $@6 T_END_FUNCTION_BLOCK

    $padrão  reduzir usando a regra 7 ($@1)

    $@1  ir ao estado 25


State 20

   20 EventInputListContainer: T_EVENT_INPUT . EventList T_END_EVENT

    $padrão  reduzir usando a regra 23 (EventList)

    EventList  ir ao estado 26


State 21

   16 FunctionBlock: T_FUNCTION_BLOCK T_ID $@7 EventInputListContainer . EventOutputListContainer EcStatesListContainer EcTransListContainer VarInputListContainer VarOutputListContainer VarListContainer $@8 FbContinue T_END_FUNCTION_BLOCK

    T_EVENT_OUTPUT  deslocar, e ir ao estado 27

    $padrão  reduzir usando a regra 21 (EventOutputListContainer)

    EventOutputListContainer  ir ao estado 28


State 22

   61 Device: T_DEVICE T_ID . T_TWO_POINTS T_ID $@13 ResourceList T_END_DEVICE
   63       | T_DEVICE T_ID . T_TWO_POINTS T_ID T_OP T_CP $@14 ResourceList T_END_DEVICE

    T_TWO_POINTS  deslocar, e ir ao estado 29


State 23

   57 System: T_SYSTEM T_ID DeviceList T_END_SYSTEM .

    $padrão  reduzir usando a regra 57 (System)


State 24

   58 DeviceList: Device DeviceList .

    $padrão  reduzir usando a regra 58 (DeviceList)


State 25

   13 CustomFunctionBlock: T_CUSTOM T_FUNCTION_BLOCK T_ID $@1 . EventInputListContainer EventOutputListContainer VarInputListContainer VarOutputListContainer VarListContainer $@2 T_ALGORITHM T_ID T_TWO_POINTS $@3 StatementList T_END_ALGORITHM $@4 T_ALGORITHM T_ID T_TWO_POINTS $@5 StatementList T_END_ALGORITHM $@6 T_END_FUNCTION_BLOCK

    T_EVENT_INPUT  deslocar, e ir ao estado 20

    $padrão  reduzir usando a regra 19 (EventInputListContainer)

    EventInputListContainer  ir ao estado 30


State 26

   20 EventInputListContainer: T_EVENT_INPUT EventList . T_END_EVENT
   24 EventList: EventList . Event T_SEMICOLON

    T_END_EVENT  deslocar, e ir ao estado 31
    T_ID         deslocar, e ir ao estado 32

    Event  ir ao estado 33


State 27

   22 EventOutputListContainer: T_EVENT_OUTPUT . EventList T_END_EVENT

    $padrão  reduzir usando a regra 23 (EventList)

    EventList  ir ao estado 34


State 28

   16 FunctionBlock: T_FUNCTION_BLOCK T_ID $@7 EventInputListContainer EventOutputListContainer . EcStatesListContainer EcTransListContainer VarInputListContainer VarOutputListContainer VarListContainer $@8 FbContinue T_END_FUNCTION_BLOCK

    T_EC_STATES  deslocar, e ir ao estado 35

    EcStatesListContainer  ir ao estado 36


State 29

   61 Device: T_DEVICE T_ID T_TWO_POINTS . T_ID $@13 ResourceList T_END_DEVICE
   63       | T_DEVICE T_ID T_TWO_POINTS . T_ID T_OP T_CP $@14 ResourceList T_END_DEVICE

    T_ID  deslocar, e ir ao estado 37


State 30

   13 CustomFunctionBlock: T_CUSTOM T_FUNCTION_BLOCK T_ID $@1 EventInputListContainer . EventOutputListContainer VarInputListContainer VarOutputListContainer VarListContainer $@2 T_ALGORITHM T_ID T_TWO_POINTS $@3 StatementList T_END_ALGORITHM $@4 T_ALGORITHM T_ID T_TWO_POINTS $@5 StatementList T_END_ALGORITHM $@6 T_END_FUNCTION_BLOCK

    T_EVENT_OUTPUT  deslocar, e ir ao estado 27

    $padrão  reduzir usando a regra 21 (EventOutputListContainer)

    EventOutputListContainer  ir ao estado 38


State 31

   20 EventInputListContainer: T_EVENT_INPUT EventList T_END_EVENT .

    $padrão  reduzir usando a regra 20 (EventInputListContainer)


State 32

   25 Event: T_ID .

    $padrão  reduzir usando a regra 25 (Event)


State 33

   24 EventList: EventList Event . T_SEMICOLON

    T_SEMICOLON  deslocar, e ir ao estado 39


State 34

   22 EventOutputListContainer: T_EVENT_OUTPUT EventList . T_END_EVENT
   24 EventList: EventList . Event T_SEMICOLON

    T_END_EVENT  deslocar, e ir ao estado 40
    T_ID         deslocar, e ir ao estado 32

    Event  ir ao estado 33


State 35

   26 EcStatesListContainer: T_EC_STATES . EcStatesList T_END_STATES

    T_ID  deslocar, e ir ao estado 41

    EcStatesList  ir ao estado 42
    EcStates      ir ao estado 43


State 36

   16 FunctionBlock: T_FUNCTION_BLOCK T_ID $@7 EventInputListContainer EventOutputListContainer EcStatesListContainer . EcTransListContainer VarInputListContainer VarOutputListContainer VarListContainer $@8 FbContinue T_END_FUNCTION_BLOCK

    T_EC_TRANSITIONS  deslocar, e ir ao estado 44

    EcTransListContainer  ir ao estado 45


State 37

   61 Device: T_DEVICE T_ID T_TWO_POINTS T_ID . $@13 ResourceList T_END_DEVICE
   63       | T_DEVICE T_ID T_TWO_POINTS T_ID . T_OP T_CP $@14 ResourceList T_END_DEVICE

    T_OP  deslocar, e ir ao estado 46

    $padrão  reduzir usando a regra 60 ($@13)

    $@13  ir ao estado 47


State 38

   13 CustomFunctionBlock: T_CUSTOM T_FUNCTION_BLOCK T_ID $@1 EventInputListContainer EventOutputListContainer . VarInputListContainer VarOutputListContainer VarListContainer $@2 T_ALGORITHM T_ID T_TWO_POINTS $@3 StatementList T_END_ALGORITHM $@4 T_ALGORITHM T_ID T_TWO_POINTS $@5 StatementList T_END_ALGORITHM $@6 T_END_FUNCTION_BLOCK

    T_VAR_INPUT  deslocar, e ir ao estado 48

    $padrão  reduzir usando a regra 46 (VarInputListContainer)

    VarInputListContainer  ir ao estado 49


State 39

   24 EventList: EventList Event T_SEMICOLON .

    $padrão  reduzir usando a regra 24 (EventList)


State 40

   22 EventOutputListContainer: T_EVENT_OUTPUT EventList T_END_EVENT .

    $padrão  reduzir usando a regra 22 (EventOutputListContainer)


State 41

   30 EcStates: T_ID . $@9 EcActionsList T_SEMICOLON

    $padrão  reduzir usando a regra 29 ($@9)

    $@9  ir ao estado 50


State 42

   26 EcStatesListContainer: T_EC_STATES EcStatesList . T_END_STATES
   27 EcStatesList: EcStatesList . EcStates

    T_END_STATES  deslocar, e ir ao estado 51
    T_ID          deslocar, e ir ao estado 41

    EcStates  ir ao estado 52


State 43

   28 EcStatesList: EcStates .

    $padrão  reduzir usando a regra 28 (EcStatesList)


State 44

   41 EcTransListContainer: T_EC_TRANSITIONS . $@10 EcTransList $@11 T_END_TRANSITIONS

    $padrão  reduzir usando a regra 39 ($@10)

    $@10  ir ao estado 53


State 45

   16 FunctionBlock: T_FUNCTION_BLOCK T_ID $@7 EventInputListContainer EventOutputListContainer EcStatesListContainer EcTransListContainer . VarInputListContainer VarOutputListContainer VarListContainer $@8 FbContinue T_END_FUNCTION_BLOCK

    T_VAR_INPUT  deslocar, e ir ao estado 48

    $padrão  reduzir usando a regra 46 (VarInputListContainer)

    VarInputListContainer  ir ao estado 54


State 46

   63 Device: T_DEVICE T_ID T_TWO_POINTS T_ID T_OP . T_CP $@14 ResourceList T_END_DEVICE

    T_CP  deslocar, e ir ao estado 55


State 47

   61 Device: T_DEVICE T_ID T_TWO_POINTS T_ID $@13 . ResourceList T_END_DEVICE

    T_RESOURCE  deslocar, e ir ao estado 56

    ResourceList  ir ao estado 57
    Resource      ir ao estado 58


State 48

   47 VarInputListContainer: T_VAR_INPUT . VarList T_END_VAR

    $padrão  reduzir usando a regra 52 (VarList)

    VarList  ir ao estado 59


State 49

   13 CustomFunctionBlock: T_CUSTOM T_FUNCTION_BLOCK T_ID $@1 EventInputListContainer EventOutputListContainer VarInputListContainer . VarOutputListContainer VarListContainer $@2 T_ALGORITHM T_ID T_TWO_POINTS $@3 StatementList T_END_ALGORITHM $@4 T_ALGORITHM T_ID T_TWO_POINTS $@5 StatementList T_END_ALGORITHM $@6 T_END_FUNCTION_BLOCK

    T_VAR_OUTPUT  deslocar, e ir ao estado 60

    $padrão  reduzir usando a regra 48 (VarOutputListContainer)

    VarOutputListContainer  ir ao estado 61


State 50

   30 EcStates: T_ID $@9 . EcActionsList T_SEMICOLON

    T_TWO_POINTS  deslocar, e ir ao estado 62

    $padrão  reduzir usando a regra 31 (EcActionsList)

    EcActionsList  ir ao estado 63


State 51

   26 EcStatesListContainer: T_EC_STATES EcStatesList T_END_STATES .

    $padrão  reduzir usando a regra 26 (EcStatesListContainer)


State 52

   27 EcStatesList: EcStatesList EcStates .

    $padrão  reduzir usando a regra 27 (EcStatesList)


State 53

   41 EcTransListContainer: T_EC_TRANSITIONS $@10 . EcTransList $@11 T_END_TRANSITIONS

    $padrão  reduzir usando a regra 42 (EcTransList)

    EcTransList  ir ao estado 64


State 54

   16 FunctionBlock: T_FUNCTION_BLOCK T_ID $@7 EventInputListContainer EventOutputListContainer EcStatesListContainer EcTransListContainer VarInputListContainer . VarOutputListContainer VarListContainer $@8 FbContinue T_END_FUNCTION_BLOCK

    T_VAR_OUTPUT  deslocar, e ir ao estado 60

    $padrão  reduzir usando a regra 48 (VarOutputListContainer)

    VarOutputListContainer  ir ao estado 65


State 55

   63 Device: T_DEVICE T_ID T_TWO_POINTS T_ID T_OP T_CP . $@14 ResourceList T_END_DEVICE

    $padrão  reduzir usando a regra 62 ($@14)

    $@14  ir ao estado 66


State 56

   67 Resource: T_RESOURCE . T_ID T_TWO_POINTS T_ID T_OP T_CP $@15 FbsListContainer EventConnListContainer DataConnListContainer T_END_RESOURCE

    T_ID  deslocar, e ir ao estado 67


State 57

   61 Device: T_DEVICE T_ID T_TWO_POINTS T_ID $@13 ResourceList . T_END_DEVICE
   64 ResourceList: ResourceList . Resource

    T_END_DEVICE  deslocar, e ir ao estado 68
    T_RESOURCE    deslocar, e ir ao estado 56

    Resource  ir ao estado 69


State 58

   65 ResourceList: Resource .

    $padrão  reduzir usando a regra 65 (ResourceList)


State 59

   47 VarInputListContainer: T_VAR_INPUT VarList . T_END_VAR
   53 VarList: VarList . VarDecl

    T_END_VAR  deslocar, e ir ao estado 70
    T_ID       deslocar, e ir ao estado 71

    VarDecl  ir ao estado 72


State 60

   49 VarOutputListContainer: T_VAR_OUTPUT . VarList T_END_VAR

    $padrão  reduzir usando a regra 52 (VarList)

    VarList  ir ao estado 73


State 61
